<resources>
    <!-- string area -->

    <string name="app_name">Healthy Eaterz</string>
    <string name="title_activity_main">healthy RACUN</string>
    <!-- activity_main string area -->
    <string name="title_home">Home</string>
    <string name="title_meal_logging">Mahlzeit</string>
    <string name="title_nutrition_alarm">Nachrichten</string>
    <string name="title_add_quick_meal">Essen hinzufügen</string>
    <string name="title_profile">Profil</string>
    <!-- fragment_meal_logging area -->
    <string name="title_breakfast">Frühstück</string>
    <string name="title_lunch">Mittagessen</string>
    <string name="title_dinner">Abendessen</string>
    <string name="label_button_add">Hinzufügen</string>
    <string name="subtitle_text_view_meal_logging_card_view_info_negative">Noch nichts hinzugefügt, jetzt hinzufügen:</string>
    <string name="subtitle_text_view_meal_logging_card_view_info_positive">Zuletzt hinzugefügte Mahlzeiten:</string>
    <string name="label_meal_logging_template">Karotten sind gut</string>
    <string name="label_button_show_more_options">Mehr Mahlzeiten anzeigen</string>
    <string name="title_add_manual_meal_bottom_sheet_add_quick_meal">Mahlzeit manuell eingeben</string>
    <string name="title_breakfast_bottom_sheet_add_quick_meal">Frühstück manuell eingeben</string>
    <string name="title_lunch_bottom_sheet_add_quick_meal">Mittagessen manuell eingeben</string>
    <string name="title_dinner_bottom_sheet_add_quick_meal">Abendessen manuell eingeben</string>
    <string name="title_scan_barcode_bottom_sheet_add_quick_meal">Barcode einscannen</string>
    <string name="title_add_new_meal">Eine neue Mahlzeit hinzufügen...</string>
    <string name="hint_add_meal_here">Mahlzeitnamen hier eingeben</string>
    <string name="title_add_new_nourishments">Zutaten hinzufügen</string>
    <string name="hint_put_directions_here">Anweisungen hier hineinschreiben</string>
    <string name="title_directions">Zubereitung</string>
    <string name="title_create_meal_ingredients">Zutaten</string>
    <string name="title_add_nourishment_search_nourishment">Nach Zutat suchen...</string>
    <string name="tag_loading">Loading...</string>


    <!-- string array area -->

    <!-- fragment_meal_logging area -->
    <string-array name="fragment_meal_logging_meal_title_strings">
        <item>@string/title_breakfast</item>
        <item>@string/title_lunch</item>
        <item>@string/title_dinner</item>
    </string-array>
    <string-array name="fragment_meal_logging_meal_subtitle_strings">
        <item>@string/subtitle_text_view_meal_logging_card_view_info_negative</item>
        <item>@string/subtitle_text_view_meal_logging_card_view_info_positive</item>
    </string-array>

    <!-- string profile area -->
    <string name="title_add_profile_data">Placeholder</string>

    <!-- string profile form area -->
    <string name="title_edit_data_title">Daten bearbeiten</string>
    <string name="title_add_edit_data_name">Name eingeben</string>
    <string name="title_add_edit_data_weight">Gewicht eingeben</string>
    <string name="title_add_edit_data_height">Größe eingeben</string>

    <!-- string home area -->
    <string name="title_display_greeting_message">Schön, dass es Sie gibt</string>
    <string name="title_subheader_nurtition_overview">Ihr derzeitiger Nährwertstatus</string>

    <!-- strings genders -->
    <string name="label_gender_female">Weiblich</string>
    <string name="label_gender_male">Männlich</string>
    <string name="label_gender_inter">Inter</string>
    <string name="label_gender_diverse">Diverse</string>
    <string name="label_gender_none">Keine Angabe</string>

    <!-- string array genders -->
    <string-array name="genderItems">
        <item>@string/label_gender_female</item>
        <item>@string/label_gender_male</item>
        <item>@string/label_gender_inter</item>
        <item>@string/label_gender_diverse</item>
        <item>@string/label_gender_none</item>
    </string-array>

    <!-- strings illnesses -->
    <string name="label_illness_cni_13a">CNI: Stufe 1–3a</string>
    <string name="label_illness_cni_3b4">CNI: Stufe 3b–4</string>
    <string name="label_illness_cni_5">CNI: Stufe 5</string>
    <string name="label_illness_cni_5d">CNI: Stufe 5D</string>
    <string name="label_illness_dm1">Diabetes Type 1</string>
    <string name="label_illness_dm2">Diabetes Type 2</string>
    <string name="label_illness_ced_mc">CED: Morbus Crohn</string>
    <string name="label_illness_ced_ulc">CED: Colitis Ulc.</string>
    <string name="alert_title_quantity">Menge eingeben</string>
    <string name="alert_title_mass">Masse eingeben</string>
    <string name="alert_label_ok">OK</string>
    <string name="alert_label_cancel">Abbrechen</string>

    <!-- string array illnesses -->
    <string-array name="illnessItems">
        <!-- gehört ausgearbeitet -->
        <item>@string/label_illness_cni_13a</item>
        <item>@string/label_illness_cni_3b4</item>
        <item>@string/label_illness_cni_5</item>
        <item>@string/label_illness_cni_5d</item>
        <item>@string/label_illness_dm1</item>
        <item>@string/label_illness_dm2</item>
        <item>@string/label_illness_ced_mc</item>
        <item>@string/label_illness_ced_ulc</item>
    </string-array>

    <!-- quantity related string attributes -->
    <string name="mass_mg">mg</string>
    <string name="mass_g">g</string>
    <string name="mass_kg">kg</string>
    <string name="volume_ml">ml</string>
    <string name="volume_cl">cl</string>
    <string name="volume_l">l</string>

    <!-- quantity string arrays -->
    <string-array name="mass_array">
        <item>@string/mass_g</item>
        <item>@string/mass_mg</item>
    </string-array>

    <string-array name="volume_array">
        <item>@string/volume_ml</item>
        <item>@string/volume_l</item>
    </string-array>

</resources>