<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_meal_logging"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_meal_logging"/>


    <item
            android:id="@+id/navigation_add_quick_meal"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_add_quick_meal"/>

    <item
            android:id="@+id/navigation_nutrition_alarm"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_nutrition_alarm"/>

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_profile"/>


</menu>