<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/bottom_sheet_container_quick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_round_corner_background"
        tools:context=".ui.quickadd.AddQuickMealFragment"
        android:orientation="vertical">

    <ImageView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_remove_24"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:tint="@color/colorPrimary"/>

    <Button
            android:id="@+id/textView_bottomSheet_breakfast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/fragment_padding"
            android:textStyle="bold"
            android:textSize="18sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/title_breakfast_bottom_sheet_add_quick_meal"/>

    <Button
            android:id="@+id/textView_bottomSheet_lunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="@dimen/fragment_padding"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/title_lunch_bottom_sheet_add_quick_meal"/>

    <Button
            android:id="@+id/textView_bottomSheet_dinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="@dimen/fragment_padding"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/title_dinner_bottom_sheet_add_quick_meal"/>

    <TextView
            android:id="@+id/textView_bottomSheet_barCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/title_scan_barcode_bottom_sheet_add_quick_meal"/>

</LinearLayout>