<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.create_meal.CreateMealActivity"
        android:orientation="vertical"
        android:background="@color/color_white">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/collapsing_app_bar"
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.CollapsableToolbar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/toolbar_layout"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:toolbarId="@+id/toolbar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="?attr/colorPrimary">

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/Theme.CollapsableToolbar.PopupOverlay"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="25dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:text="@string/title_add_new_meal"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/hint_add_meal_here"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:background="@drawable/collapsable_toolbar_edit_text_shape"/>

            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            android:paddingTop="30dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="@drawable/bottom_sheet_round_corner_background">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/fragment_padding"
                android:orientation="vertical">

            <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/cardView_style">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            style="@style/text_view_image_view_subheading_style"
                            android:text="@string/title_directions"/>

                    <View
                            style="@style/view_horizontal_line_style"/>

                    <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:height="150dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/hint_put_directions_here"
                            android:paddingStart="20dp"
                            android:paddingEnd="20dp"
                            android:background="@drawable/bottom_sheet_round_corner_background"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/activity_create_meal_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_anchor="@id/collapsing_app_bar"
            app:layout_anchorGravity="bottom|end"
            android:src="@drawable/ic_done_24"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>